--- a/client/components/tinymce/plugins/media/style.scss
+++ b/client/components/tinymce/plugins/media/style.scss
@@ -1,5 +1,5 @@
 img.is-transient {
 	/**
-		This class is applied to images that are currently uploaded to the media library from the TinyMCE editor
+		This class is applied to images that are currently uploading to the media library from the TinyMCE editor
 	*/
 }
