Add styles to EditorPreview to display fullscreen and positioned on top of editor toolbar.

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -453,6 +453,7 @@
 @import 'post-editor/editor-post-formats/style';
 @import 'post-editor/editor-post-type/style';
 @import 'post-editor/editor-post-type-unsupported/style';
+@import 'post-editor/editor-preview/style';
 @import 'post-editor/editor-revisions/style';
 @import 'post-editor/editor-seo-accordion/style';
 @import 'post-editor/editor-sharing/style';
