Rename VideoEditorButtons component to VideoEditorControls

--- a/client/blocks/video-editor/style.scss
+++ b/client/blocks/video-editor/style.scss
@@ -56,7 +56,7 @@
 	margin: 16px 0;
 }
 
-.video-editor__buttons {
+.video-editor__controls {
 	border-top: 1px solid $gray-dark;
 	padding: 16px;
 	text-align: right;
@@ -85,6 +85,6 @@
 	}
 }
 
-.video-editor__buttons-button.button {
+.video-editor__controls-button.button {
 	margin-left: 10px;
 }
