Hide other content when the sidebar is focused on mobile displays

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -62,3 +62,11 @@
 		flex-grow: 1;
 	}
 }
+
+.focus-sidebar {
+	@include breakpoint( "<660px" ) {
+		.sticky-panel, .products__form {
+			display: none;
+		}
+	}
+}
