Add class to progress bar component

--- a/client/blocks/video-editor/style.scss
+++ b/client/blocks/video-editor/style.scss
@@ -45,7 +45,7 @@
 	transform: translate( -50%, -50% );
 }
 
-.video-editor__content .progress-bar {
+.video-editor__progress-bar.progress-bar {
 	width: 90%;
 	margin: 0 auto;
 }
