--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -148,6 +148,7 @@ $z-layers: (
 		'.dialog__backdrop': 100200,
 		'.wplink__dialog.dialog.card': 100200,
 		'.web-preview': 100200,
+		'.web-preview .editor-notice': 100201,
 		'.design-menu.is-visible': 100201,
 		'.popover.gallery__order-popover': 100300,
 		'popover.is-dialog-visible': 100300,
