--- a/client/post-editor/editor-notice/style.scss
+++ b/client/post-editor/editor-notice/style.scss
@@ -17,4 +17,54 @@
 			background-image: none;
 		}
 	}
+
+	&.is-global {
+		@extend .global-notices;
+		z-index: z-index( 'root', '.web-preview .editor-notice' );
+
+		@include breakpoint( ">660px" ) {
+				top: 47px + 49px + 16px;
+		}
+
+		@include breakpoint( ">960px" ) {
+				top: 47px + 49px + 24px;
+		}
+
+		.notice {
+			flex-wrap: nowrap;
+			margin-bottom: 0;
+			text-align: left;
+			pointer-events: auto;
+
+			@include breakpoint( ">660px" ) {
+				display: flex;
+				border-radius: 20px;
+				overflow: hidden;
+				margin-bottom: 24px;
+			}
+		}
+
+		.notice__icon {
+			@include breakpoint( ">660px" ) {
+				padding: 8px 0 8px 16px;
+			}
+		}
+
+		.notice__content {
+			flex-basis: auto;
+			flex-grow: 1;
+
+			@include breakpoint( ">660px" ) {
+				padding: 9px 13px;
+			}
+		}
+
+		.notice__dismiss {
+			flex-shrink: 0;
+
+			@include breakpoint( ">660px" ) {
+				padding: 8px 16px;
+			}
+		}
+	}
 }
