--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -53,8 +53,8 @@
 	z-index: z-index( 'root', '.search-stream__input-card' );
 }
 
-// Top margins for Sites in Search
-// Post recs and post results with suggested terms
+// Top margins
+// Top margin for post recs and post results with suggested terms
 .search-stream .search-stream__recommendation-list-item:nth-child(2),
 .search-stream .search-stream__recommendation-list-item:nth-child(3) {
 	margin-top: 100px;
@@ -71,7 +71,7 @@
 	}
 }
 
-// Post recs
+// Top margin for post recs without suggested terms
 .search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(2),
 .search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(3) {
 	margin-top: 70px;
@@ -101,7 +101,7 @@
 	}
 }
 
-// Site results
+// Top margin for site results
 .search-stream.search-stream__with-sites .is-two-columns .search-stream__post-results .reader-post-card:nth-child(2),
 .search-stream.search-stream__with-sites .is-two-columns .search-stream__site-results {
 	margin-top: 150px;
@@ -294,12 +294,6 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	text-transform: uppercase;
 }
 
-.search-stream__site-header, .search-stream__site-results {
-	margin-left: 40px;
-	max-width: 265px;
-	width: 100%;
-}
-
 .search-stream__post-header,
 .search-stream__site-header {
 	border-bottom: 1px solid lighten( $gray, 30% );
@@ -326,10 +320,6 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	flex: 1 0 0%;
 	margin-top: 5px;
 	width: 0;
-}
-
-.search-stream__header .section-nav__panel {
-	height: 58px;
 }
 
 .search-stream__header .section-nav-tabs__list {
@@ -360,6 +350,18 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 		text-transform: uppercase;
 		width: 100%;
 	}
+}
+
+// Site results
+.search-stream__site-header, .search-stream__site-results {
+	margin-left: 40px;
+	max-width: 265px;
+	width: 100%;
+}
+
+.reader-subscription-list-item .follow-button__label,
+.reader-subscription-list-item__settings-label {
+	display: none;
 }
 
 // Custom styling for cards in post results
