--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -359,8 +359,8 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	width: 100%;
 }
 
-.reader-subscription-list-item .follow-button__label,
-.reader-subscription-list-item__settings-label {
+.search-stream__site-results .reader-subscription-list-item .follow-button__label,
+.search-stream__site-results .reader-subscription-list-item__settings-label {
 	display: none;
 }
 
