--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -353,7 +353,8 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 }
 
 // Site results
-.search-stream__site-header, .search-stream__site-results {
+.search-stream__site-header,
+.search-stream__site-results {
 	margin-left: 40px;
 	max-width: 265px;
 	width: 100%;
