Set EditorPreview background color.

--- a/client/post-editor/editor-preview/style.scss
+++ b/client/post-editor/editor-preview/style.scss
@@ -1,4 +1,5 @@
 .editor-preview .web-preview__inner {
+	background: $gray-light;
 	display: none;
 	opacity: 0;
 	transition: opacity 0.3s ease-in-out;
