--- a/client/post-editor/editor-preview/style.scss
+++ b/client/post-editor/editor-preview/style.scss
@@ -1,17 +1,24 @@
-.editor-preview .web-preview__inner {
+.editor-preview {
+	display: flex;
+	flex-direction: column;
+}
+
+.editor-preview.is-fullscreen .web-preview__inner {
 	background: $gray-light;
 	display: none;
 	opacity: 0;
+	position: fixed;
+		top: 46px;
+		right: 0;
+		left: 0;
+		z-index: z-index( 'root', '.web-preview' );
 	transition: opacity 0.3s ease-in-out;
 	width: 100%;
+	height: calc( 100% - 46px );
 
 	&.is-visible {
 		display: flex;
 		opacity: 1;
-        position: absolute;
-			top: -46px;
-			left: 0;
-			z-index: z-index( 'root', '.web-preview' );
 		visibility: visible;
     }
 }
