typography sizing consistency

--- a/client/extensions/woocommerce/app/settings/payments/style.scss
+++ b/client/extensions/woocommerce/app/settings/payments/style.scss
@@ -31,6 +31,14 @@
 		border-top: 1px solid lighten( $gray, 30% );
 	}
 
+	.payments__method-information {
+		font-size: 14px;
+	}
+
+	.payments__method-name {
+		font-size: 14px;
+	}
+
 	.list-item-field {
 		width: 30%;
 
