--- a/client/extensions/woocommerce/app/settings/payments/style.scss
+++ b/client/extensions/woocommerce/app/settings/payments/style.scss
@@ -28,7 +28,7 @@
 	}
 
 	.list-item {
-		border-top: 1px solid lighten( $gray, 30% );
+		border-top: 1px solid $border-ultra-light-gray;
 	}
 
 	.payments__method-information {
@@ -65,7 +65,7 @@
 
 .payments__method-edit-pane {
 	padding: 16px;
-	border-top: 1px solid $gray-light;
+	border-top: 1px solid $border-ultra-light-gray;
 	width: 100%;
 
 	@include breakpoint( '>480px' ) {
