--- a/client/extensions/woocommerce/components/list/list-header/style.scss
+++ b/client/extensions/woocommerce/components/list/list-header/style.scss
@@ -1,11 +1,11 @@
 .list-header {
-	background: $gray-light;
 	border-bottom: 1px solid lighten( $gray, 20% );
 	display: flex;
 	flex-direction: row;
 	font-weight: normal;
 	font-size: 13px;
 	justify-content: space-between;
+	font-weight: 700;
 
 	.list-item-field {
 		padding-top: 8px;
