--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -373,7 +373,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 
 .search-stream__results.is-two-columns .search-stream__post-results {
 	max-width: 660px;
-	width: 100%;
+	width: calc( 100% - 300px );
 
 	.reader-post-card__post {
 
