Pull global-styles EditorNoticed outside of editor content.

--- a/client/post-editor/editor-notice/style.scss
+++ b/client/post-editor/editor-notice/style.scss
@@ -39,8 +39,8 @@
 			@include breakpoint( ">660px" ) {
 				display: flex;
 				border-radius: 20px;
+				margin: 0;
 				overflow: hidden;
-				margin-bottom: 24px;
 			}
 		}
 
