Fix top margin single col mobile

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -83,7 +83,11 @@
 }
 
 .search-stream.search-stream__with-sites .search-stream__single-column-results {
-	padding-top: 150px;
+	padding-top: 130px;
+
+	@include breakpoint( ">660px" ) {
+		padding-top: 150px;
+	}
 }
 
 .search-stream.search-stream__with-sites .search-stream__single-column-results .search-stream__recommendation-list-item:nth-child(2) {
