Add domain connect sync flow authorize page (#15005)
* WIP - Domain Connect Authorize Page

* WIP - Domain Connect Authorize Page

* Added Success and Error notices.

* Added framework to retrieve template conflicts from server.

* WIP - Fetch services from API.

* WIP - Changed path prefix from  to

* WIP - broke primary component into multiple sub-components

* WIP - Added sub-components

* fixed linter issue

* Properly pass  into the components using

* Changed name of  variable to  since that seems like a more semantic name.

* Use  for  constants since we don't care what the actual values are.

* Moved  and  inside the body of the classes as static class properties. Also, added missing  to .

* Remove unnecessary nested elements and simplified scss.

* Moved  and  for  inside class body.

* Moved duplicated comparison into a .

* Set initial state directly in body of class instead of in constructor.

* Fixed typo of  variable in .

* Removed unused state variable  from .

* Handled a few more error cases, moved wpcom calls directly into the component, changed `isLoading` back to `isPlaceholder`

* Domain Connect now requires both the providerId and the serviceId to apply a template.

* Updates to match API endpoint updates

* Moved the start of the sync flow endpoint from Calypso to WPCOM public-api.

* A few minor tweaks based on @klimeryk's comments.

* Updates based on @aidvu's comments.

* Changed sync flow template apply endpoint to match changes in D5862-code

* Corrected the value of  to require a login if user is logged out.

--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -411,6 +411,61 @@ input[type=radio].domain-management-list-item__radio {
 	}
 }
 
+.domain-connect__main {
+	h2 {
+		font-size: 20px;
+		font-weight: 600;
+		margin-bottom: 1em;
+	}
+
+	a {
+		cursor: pointer;
+	}
+
+	.domain-connect__button {
+		margin-right: 16px;
+		margin-top: 16px;
+	}
+
+	.domain-connect__footer {
+		border-top: 1px solid $gray-light;
+		padding-top: 10px;
+	}
+
+	.domain-connect__is-placeholder {
+		span {
+			@include placeholder( 23% );
+
+			display: block;
+			margin: 0.8em 0 0.8em 0;
+			height: 1em;
+
+			&:last-child {
+				width: 30%;
+			}
+
+			&:first-child {
+				width: 100%;
+			}
+		}
+	}
+
+	.domain-connect__dns-records {
+		background-color: $gray-light;
+		color: $gray-text-min;
+
+		* {
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		& > * + * {
+			margin-top: 1.5em;
+		}
+	}
+}
+
 .email-forwarding__form {
 	margin-top: 0;
 
@@ -739,7 +794,9 @@ ul.email-forwarding__list {
 	}
 }
 
-.dns__list > ul {
+.dns__list > ul,
+ul.domain-connect__dns-list
+{
 	list-style: none;
 	margin: 15px 0 0 0;
 	padding: 0;
@@ -780,10 +837,12 @@ ul.email-forwarding__list {
 		}
 	}
 
+	.domain-connect__dns-list-type,
 	.dns__list-type {
 		min-width: 60px;
 	}
 
+	.domain-connect__dns-list-info,
 	.dns__list-info {
 		width: 100%;
 		word-break: break-all;
