Center header content and set bottom margin

--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -76,7 +76,6 @@
 	.reader-feed-header__back-and-follow {
 		display: flex;
 		justify-content: center;
-		height: 0;
 		margin-left: auto;
 
 		@include breakpoint-deprecated( "<960px" ) {
@@ -114,7 +113,8 @@
 	.reader-feed-header__follow-and-settings {
 		display: flex;
 		flex-direction: row;
-		justify-content: flex-start;
+		justify-content: center;
+		flex: 0 0 100%;
 		gap: 20px;
 	}
 
