--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -25,7 +25,7 @@
 
 .reader-feed-header__site-icon {
 	align-self: center;
-	padding-bottom: 20px;
+	padding-bottom: 16px;
 }
 
 .reader-feed-header .reader-feed-header__site-badge {
@@ -42,6 +42,7 @@
 	font-size: $font-title-small;
 	font-weight: 600;
 	max-height: 16px * 4;
+	margin-bottom: 12px;
 	overflow: hidden;
 	position: relative;
 	text-align: center;
@@ -102,6 +103,7 @@
 		color: var(--color-text-subtle);
 		font-size: $font-body-small;
 		flex: 0 0 100%;
+		margin-bottom: 24px;
 		justify-content:center;
 		text-align:center;
 
