--- a/client/blocks/reader-related-card/style.scss
+++ b/client/blocks/reader-related-card/style.scss
@@ -299,20 +299,11 @@
 }
 
 .reader-related-card__excerpt {
+	display: -webkit-box;
+	overflow: hidden;
 	word-wrap: break-word;
-
-	&.post-excerpt {
-		display: -webkit-box;
-		font-size: $font-body;
-		line-height: 25px;
-		max-height: none;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		-webkit-box-orient: vertical;
-		-webkit-line-clamp: initial;
-		word-wrap: break-word;
-		word-break: break-word; // Wrap long words in WebKit
-	}
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 // Follow buttons in recommended posts
