Added border-radius to feature images

--- a/client/blocks/reader-featured-image/style.scss
+++ b/client/blocks/reader-featured-image/style.scss
@@ -1,5 +1,6 @@
 .reader-featured-image {
-	border: 1px solid var(--color-neutral-0);
+	border: 1px solid var( --color-neutral-0 );
+	border-radius: 6px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
