Added gutter to left of .reader-post-card__post

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -395,6 +395,7 @@
 	clear: both;
 	display: flex;
 	flex-direction: column;
+	margin-left: 44px;
 	margin-top: 14px;
 
 	.reader-post-card__post-details {
