Refactored feature image to show entire height of image

--- a/client/blocks/reader-featured-image/style.scss
+++ b/client/blocks/reader-featured-image/style.scss
@@ -1,8 +1,10 @@
 .reader-featured-image {
 	border: 1px solid var( --color-neutral-0 );
-	border-radius: 6px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
+	img {
+		border-radius: 6px;
+	}
 }
