--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -4,9 +4,14 @@
 }
 
 .reader-post-options-menu__ellipsis-menu {
+	position: relative;
+
 	.ellipsis-menu__toggle {
 		padding: 0;
 		height: 24px;
+		position: relative;
+		right: -1px;
+		top: 6px;
 
 		.ellipsis-menu__toggle-icon {
 			top: -1px;
@@ -18,12 +23,12 @@
 	border-bottom: 5px solid var( --color-neutral-0 );
 	box-shadow: none;
 	margin: 0;
-	padding: 18px 15px 20px;
+	padding: 12px 15px 20px;
 	position: relative;
 
 	@include breakpoint-deprecated( '>660px' ) {
 		border-bottom: 1px solid var( --color-neutral-5 );
-		padding: 18px 0 20px;
+		padding: 12px 0 20px;
 	}
 
 	&.is-selected {
@@ -107,7 +112,7 @@
 	&.has-thumbnail,
 	&.is-gallery {
 		.reader-post-card__post {
-			margin-top: 18px;
+			margin-top: 10px;
 		}
 
 		.reader-post-card__post-details {
@@ -122,7 +127,7 @@
 	&.is-gallery,
 	&.is-photo {
 		.reader-post-card__post {
-			margin-top: 16px;
+			margin-top: 8px;
 		}
 	}
 
@@ -135,8 +140,7 @@
 			display: flex;
 			flex-direction: row;
 			max-height: 16px * 1.4;
-			max-width: calc(100% - 40px);
-			overflow: hidden;
+			max-width: calc(100% - 75px);
 			position: relative;
 
 			&::after {
@@ -252,6 +256,7 @@
 	display: flex;
 	font-size: $font-body-small;
 	align-items: space-between;
+	position: relative;
 }
 
 .reader-post-card__author::after {
@@ -262,7 +267,8 @@
 .reader__content .reader-post-card__timestamp-link,
 .reader__content .reader-post-card__timestamp-slug,
 .reader__content .reader-post-card__tag-link {
-	color: var(--color-text-subtle);
+	color: var( --color-text-subtle );
+	font-size: 12px;
 	margin-top: 2px;
 	white-space: nowrap;
 	cursor: pointer;
@@ -278,9 +284,10 @@
 }
 
 .reader-post-card__byline-details {
-	color: var(--color-primary);
-	width: 100%;
-	overflow: hidden;
+	color: var( --color-primary );
+	width: calc(100% - 75px);
+	position: relative;
+	top: 3px;
 }
 
 // Fix for IE11 unable to handle nested flexbox min-height.
@@ -292,6 +299,7 @@
 .reader-post-card__byline-author-site {
 	font-family: $sans;
 	font-weight: 600;
+	margin-bottom: 2px;
 	overflow: hidden;
 	position: relative;
 	height: 20px;
@@ -323,12 +331,14 @@
 	display: flex;
 	flex-direction: row;
 	height: 40px;
+	margin-top: 8px;
 	overflow-y: scroll;
 	position: relative;
 
 	-ms-overflow-style: none; /* Internet Explorer 10+ */
 	scrollbar-width: none; /* Firefox */
 	gap: 5px;
+	width: calc( 100% + 22px );
 	&::-webkit-scrollbar {
 		display: none;  /* Safari and Chrome */
 	}
@@ -381,6 +391,7 @@
 .reader-post-card__link {
 	color: var(--color-primary);
 	cursor: pointer;
+	font-size: 15px;
 
 	&:hover {
 		color: var(--color-primary-light);
@@ -396,7 +407,7 @@
 	display: flex;
 	flex-direction: column;
 	margin-left: 52px;
-	margin-top: 14px;
+	margin-top: 6px;
 
 	.reader-post-card__post-details {
 		width: 100%;
