Videopress onboarding v2 global style (#67736)
* VideoPress onboarding theme

* VideoPress powered logo

* Update flow progress and fix svg properties in videopress logo

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -2,6 +2,10 @@
 @import "@automattic/onboarding/styles/mixins";
 
 .intro {
+	&.videopress {
+		padding: 0px;
+	}
+
 	&.newsletter {
 		background-color: rgb(162 218 254);
 
