--- a/packages/onboarding/src/step-container/style.scss
+++ b/packages/onboarding/src/step-container/style.scss
@@ -252,10 +252,11 @@
 	}
 
 	/**
-	 * Jetpack Powered
+	 * Jetpack Powered and VideoPress Powered
 	 */
 	.step-container__jetpack-powered,
-	.step-container__header-jetpack-powered {
+	.step-container__header-jetpack-powered,
+	.step-container__videopress-powered {
 		display: flex;
 		justify-content: center;
 		text-align: center;
