Videopress onboarding v2 global style (#67736)
* VideoPress onboarding theme

* VideoPress powered logo

* Update flow progress and fix svg properties in videopress logo

--- a/packages/onboarding/src/step-container/style.scss
+++ b/packages/onboarding/src/step-container/style.scss
@@ -252,9 +252,10 @@
 	}
 
 	/**
-	 * Jetpack Powered
+	 * Jetpack Powered and VideoPress Powered
 	 */
-	.step-container__jetpack-powered {
+	.step-container__jetpack-powered,
+	.step-container__videopress-powered {
 		display: flex;
 		justify-content: center;
 		width: 100%;
